[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neural-tokenizers"
version = "0.1.0"
description = "Neural tokenizers for large language models"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Haukur B. Símonarson", email = "haukur@mideind.com" },
]
maintainers = [
    { name = "Haukur B. Símonarson", email = "haukur@mideind.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "icecream>2.1.4",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/mideind/neural-tokenizers"
Repository = "https://github.com/mideind/neural-tokenizers"
Issues = "https://github.com/mideind/neural-tokenizers/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/neural_tokenizers"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "B", "C4", "ARG", "N", "D", "UP", "ANN", "S", "BLE", "FBT", "A"]
ignore = ["D100", "D104", "ANN101", "ANN102"]
target-version = "py312"

[tool.ruff.flake8-annotations]
mypy-init-return = true

[tool.ruff.per-file-ignores]
"tests/**/*" = ["S101", "ANN", "D", "FBT"]